--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 # Project dependecies
 ted-sws @ git+https://github.com/OP-TED/ted-rdf-conversion-pipeline.git
-
+networkx~=3.1
+pyvis~=0.3.2
+rdflib~=6.1.1
