--- a/tox.ini
+++ b/tox.ini
@@ -8,88 +8,48 @@ envlist =
 [testenv]
 description = Running tests in the corresponding environment
 passenv = *
-
-###
-
-# CORE ENV :: START
-
-[testenv:core-opts]
 deps =
-    -r mapping_workbench/core/requirements.txt
-    -r mapping_workbench/core/requirements.dev.txt
-source = mapping_workbench/core
-unit-command = {envpython} -m pytest tests/unit/core --cov
-e2e-command = {envpython} -m pytest tests/e2e/core --cov
+    -rrequirements.txt
+    -rrequirements.dev.txt
 
-[testenv:unit-core]
-description = Running UNIT tests for CORE
-#deps = {[testenv:core-opts]deps}
-#commands = {[testenv:core-opts]unit-command}
-source = {[testenv:core-opts]source}
-
-[testenv:e2e-core]
-description = Running E2E tests for CORE
-deps = {[testenv:core-opts]deps}
-commands = {[testenv:core-opts]e2e-command}
-source = {[testenv:core-opts]source}
-
-[testenv:features-core]
 commands =
-    {envpython} -m pytest --alluredir=./tests/reports/allure/test_results/ ./tests/features/core
+    {envpython} -m pytest --cov-config=tox.ini
+
+[testenv:unit]
+description = Running UNIT tests in the corresponding environment
+commands =
+    {envpython} -m pytest tests/unit/{posargs}
+
+[testenv:e2e]
+commands =
+    {envpython} -m pytest tests/e2e/{posargs}
+
+[testenv:features]
+commands =
+    {envpython} -m pytest --alluredir=./tests/reports/allure/test_results/ ./tests/features/
     allure generate --allow-file-access-from-files ./tests/reports/allure/test_results/ --clean -o ./tests/reports/allure/report/
     allure-combine ./tests/reports/allure/report/ --remove-temp-files
 
-[testenv:core]
-description = Running tests for CORE
-deps = {[testenv:core-opts]deps}
+[testenv:cover]
+basepython =
+    python3.8
 commands =
-    {[testenv:core-opts]unit-command}
-    {[testenv:core-opts]e2e-command}
-source = {[testenv:core-opts]source}
+    {envpython} -m pytest \
+    --cov-report term \
+    --cov-report html \
+    --cov
 
-# CORE ENV :: END
+[coverage:run]
+relative_files = True
+source = mapping_workbench/
+branch = False
 
-###
 
-# TOOLCHAIN ENV :: START
+[pytest]
+log_cli = true
+log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
+log_cli_date_format = %Y-%m-%d %H:%M:%S
 
-[testenv:toolchain-opts]
-deps =
-    -r mapping_workbench/toolchain/requirements.txt
-    -r mapping_workbench/toolchain/requirements.dev.txt
-source = mapping_workbench/toolchain
-unit-command = {envpython} -m pytest tests/unit/toolchain --cov
-e2e-command = {envpython} -m pytest tests/e2e/toolchain --cov
-
-[testenv:unit-toolchain]
-description = Running UNIT tests for TOOLCHAIN
-deps = {[testenv:toolchain-opts]deps}
-commands = {[testenv:toolchain-opts]unit-command}
-source = {[testenv:toolchain-opts]source}
-
-[testenv:e2e-toolchain]
-description = Running E2E tests for TOOLCHAIN
-deps = {[testenv:toolchain-opts]deps}
-commands = {[testenv:toolchain-opts]e2e-command}
-source = {[testenv:toolchain-opts]source}
-
-[testenv:features-toolchain]
-commands =
-    {envpython} -m pytest --alluredir=./tests/reports/allure/test_results/ ./tests/features/toolchain
-    allure generate --allow-file-access-from-files ./tests/reports/allure/test_results/ --clean -o ./tests/reports/allure/report/
-    allure-combine ./tests/reports/allure/report/ --remove-temp-files
-
-[testenv:toolchain]
-description = Running tests for TOOLCHAIN
-deps = {[testenv:toolchain-opts]deps}
-commands =
-    {[testenv:toolchain-opts]unit-command}
-    {[testenv:toolchain-opts]e2e-command}
-source = {[testenv:toolchain-opts]source}
-
-# TOOLCHAIN ENV :: END
-
-###
 
 addopts =
     --cov=ted_sws
@@ -104,7 +64,21 @@ addopts =
     --disable-pytest-warnings
     --disable-warnings
 
-[pytest]
-log_cli = true
-log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
-log_cli_date_format = %Y-%m-%d %H:%M:%S
+junit_family=xunit2
+
+testpaths =
+    tests
+
+[testenv:linter]
+deps =
+    flake8
+    flake8-bugbear
+    flake8-builtins
+    flake8-comprehensions
+    flake8-string-format
+    black
+    pydocstyle
+commands =
+    flake8
+    black --check .
+    pydocstyle
