--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,7 @@ celerybeat.pid
 
 # Environments
 .env
+.env.*
 .venv
 env/
 venv/
@@ -135,3 +136,5 @@ junit_report.xml
 .idea/workspace.xml
 
 .DS_Store
+node_modules
+package-lock.json
