--- a/requirements.toolchain.dev.txt
+++ b/requirements.toolchain.dev.txt
@@ -1,4 +1,4 @@
-# Development libraries
+# Development TOOLCHAIN libraries
 coverage~=6.3.1
 pytest~=7.0.0
 pytest-bdd~=5.0.0
@@ -7,4 +7,3 @@ pytest-subtests~=0.6.0
 tox~=3.24.5
 tox-pytest-summary~=0.1.2
 mongomock==4.0.0
-uvicorn~=0.21.1
