--- a/requirements.toolchain.txt
+++ b/requirements.toolchain.txt
@@ -1,13 +1,16 @@
-# Project dependecies
+# TOOLCHAIN dependecies
 ted-sws @ git+https://github.com/OP-TED/ted-rdf-conversion-pipeline.git
 networkx~=3.1
 pyvis~=0.3.2
 rdflib~=6.1.1
 lxml~=4.9.2
 elementpath~=4.1.0
-pydantic~=1.9.2
+pydantic~=1.10.7
 fastapi~=0.95.1
+fastapi_users~=11.0.0
 pymongo~=4.3.3
 graphene~=3.2.2
-sqlalchemy~=2.0.11
-graphene-sqlalchemy~=2.3.0
+python-multipart~=0.0.6
+motor~=3.1.2
+python-dotenv~=1.0.0
+uvicorn~=0.21.1
