--- a/infra/backend/Dockerfile
+++ b/infra/backend/Dockerfile
@@ -5,7 +5,7 @@ RUN apt update && apt install -y make nodejs npm
 
 ## working in the /usr/src/mapping_workbench/app
 WORKDIR /usr/src/backend
-COPY mapping_workbench .
+COPY mapping_workbench mapping_workbench
 COPY requirements.backend.txt .
 COPY Makefile .
 
