--- a/infra/backend/Dockerfile
+++ b/infra/backend/Dockerfile
@@ -4,7 +4,7 @@ EXPOSE 8000
 RUN apt update && apt install -y make nodejs npm
 
 ## working in the /usr/src/mapping_workbench/app
-WORKDIR /usr/src/backend
+WORKDIR /usr/src/app
 COPY mapping_workbench mapping_workbench
 COPY requirements.backend.txt .
 COPY Makefile .
