--- a/mapping_workbench/frontend/Makefile
+++ b/mapping_workbench/frontend/Makefile
@@ -7,7 +7,8 @@ install-prod-frontend-deps:
 	@ npm install --production
 
 install-frontend:
-	@ npm install -g serve && npm run build # && rm -fr node_modules
+#	@ npm install -g serve && npm run build && rm -fr node_modules
+	@ npm install -g serve && npm run build
 
 install-dev-frontend: install-dev-frontend-deps install-frontend
 	@ echo "Installing DEV FRONTEND"
