--- a/mapping_workbench/frontend/Makefile
+++ b/mapping_workbench/frontend/Makefile
@@ -1,19 +1,24 @@
-install-dev-frontend-deps:
-	@ npm install
+init-dev-frontend-deps:
+	@ npm install && npm run build
 
-install-staging-frontend-deps: install-dev-frontend-deps
+init-staging-frontend-deps: install-dev-frontend-deps
 
-install-prod-frontend-deps:
-	@ npm install --production
+init-prod-frontend-deps:
+	@ npm install --production && npm install -g serve && npm run build && rm -fr node_modules
 
-install-frontend:
-	@ npm install -g serve && npm run build && rm -fr node_modules
+start-dev-frontend:
+	@ npm run start
 
-install-dev-frontend: install-dev-frontend-deps install-frontend
+start-staging-frontend: start-dev-frontend
+
+start-prod-frontend:
+	serve -s build
+
+install-dev-frontend: init-dev-frontend-deps start-dev-frontend
 	@ echo "Installing DEV FRONTEND"
 
-install-staging-frontend: install-staging-frontend-deps install-frontend
+install-staging-frontend: init-staging-frontend-deps start-staging-frontend
 	@ echo "Installing STAGING FRONTEND"
 
-install-prod-frontend: install-prod-frontend-deps install-frontend
+install-prod-frontend: init-prod-frontend-deps start-prod-frontend
 	@ echo "Installing PROD FRONTEND"
