--- a/infra/mongodb/docker-compose.yml
+++ b/infra/mongodb/docker-compose.yml
@@ -43,12 +43,12 @@ services:
     labels:
       #### Labels define the behavior and rules of the traefik proxy for this container ####
       - "traefik.enable=true" # <== Enable traefik to proxy this container
-      - "traefik.http.routers.${ENVIRONMENT}-mw-mongo.rule=Host(`mongo.${SUBDOMAIN}${DOMAIN}`)" # <== Your Domain Name goes here for the http rule
-      - "traefik.http.routers.${ENVIRONMENT}-mw-mongo.entrypoints=web" # <== Defining the entrypoint for http, **ref: line 30
-      - "traefik.http.routers.${ENVIRONMENT}-mw-mongo.middlewares=redirect@file" # <== This is a middleware to redirect to https
-      - "traefik.http.routers.${ENVIRONMENT}-mw-mongo-secured.rule=Host(`mongo.${SUBDOMAIN}${DOMAIN}`)" # <== Your Domain Name for the https rule
-      - "traefik.http.routers.${ENVIRONMENT}-mw-mongo-secured.entrypoints=web-secured" # <== Defining entrypoint for https, **ref: line 31
-      - "traefik.http.routers.${ENVIRONMENT}-mw-mongo-secured.tls=true"
+      - "traefik.http.routers.mw-mongo-${ENVIRONMENT}.rule=Host(`mongo.mw.${SUBDOMAIN}${DOMAIN}`)" # <== Your Domain Name goes here for the http rule
+      - "traefik.http.routers.mw-mongo-${ENVIRONMENT}.entrypoints=web" # <== Defining the entrypoint for http, **ref: line 30
+      - "traefik.http.routers.mw-mongo-${ENVIRONMENT}.middlewares=redirect@file" # <== This is a middleware to redirect to https
+      - "traefik.http.routers.mw-mongo-${ENVIRONMENT}-secured.rule=Host(`mongo.mw.${SUBDOMAIN}${DOMAIN}`)" # <== Your Domain Name for the https rule
+      - "traefik.http.routers.mw-mongo-${ENVIRONMENT}-secured.entrypoints=web-secured" # <== Defining entrypoint for https, **ref: line 31
+      - "traefik.http.routers.mw-mongo-${ENVIRONMENT}-secured.tls=true"
 
 
 volumes:
