--- a/infra/frontend/Dockerfile
+++ b/infra/frontend/Dockerfile
@@ -7,6 +7,8 @@ ARG ENVIRONMENT
 ARG HOST
 ARG PORT
 ARG NODE_ENV
+ARG DOMAIN
+ARG SUBDOMAIN
 
 RUN apk add make
 
@@ -26,8 +28,9 @@ COPY ./src ./src
 COPY ./public ./public
 
 RUN echo "NODE_ENV=${NODE_ENV}" > ${ENV_FILE} \
-    && echo "PORT=${PORT}" > ${ENV_FILE} \
-    && echo "NODE_PATH=/app" >> ${ENV_FILE}
+    && echo "PORT=${PORT}" >> ${ENV_FILE} \
+    && echo "NODE_PATH=/app" >> ${ENV_FILE} \
+    && echo "API_ADDRESS=api.mw.${SUBDOMAIN}${DOMAIN}" >> ${ENV_FILE}
 
 RUN make install-${ENVIRONMENT}-frontend
 
