--- a/infra/frontend/docker-compose.yml
+++ b/infra/frontend/docker-compose.yml
@@ -15,6 +15,8 @@ services:
         - HOST=${MW_FRONTEND_SERVER_HOST}
         - PORT=${MW_FRONTEND_SERVER_PORT}
         - NODE_ENV=${NODE_ENV}
+        - DOMAIN=${DOMAIN}
+        - SUBDOMAIN=${SUBDOMAIN}
     ports:
       - ${MW_FRONTEND_SERVER_PORT}:${MW_FRONTEND_SERVER_PORT}
     networks:
