frontend/backend updates

--- a/infra/backend/docker-compose.yml
+++ b/infra/backend/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       #### BACKEND rules
       - "traefik.http.routers.mw-backend-${ENVIRONMENT}.rule=Host(`api.mw.${SUBDOMAIN}${DOMAIN}`)" # <== Your Domain Name goes here for the http rule
       - "traefik.http.routers.mw-backend-${ENVIRONMENT}.entrypoints=web" # <== Defining the entrypoint for http, **ref: line 30
-      - "traefik.http.routers.mw-backend-${ENVIRONMENT}.middlewares=redirect@file" # <== This is a middleware to redirect to https
+      #- "traefik.http.routers.mw-backend-${ENVIRONMENT}.middlewares=redirect@file" # <== This is a middleware to redirect to https
       - "traefik.http.routers.mw-backend-${ENVIRONMENT}-secured.rule=Host(`api.mw.${SUBDOMAIN}${DOMAIN}`)" # <== Your Domain Name for the https rule
       - "traefik.http.routers.mw-backend-${ENVIRONMENT}-secured.entrypoints=web-secured" # <== Defining entrypoint for https, **ref: line 31
       - "traefik.http.routers.mw-backend-${ENVIRONMENT}-secured.tls=true"
