--- a/infra/frontend/Dockerfile
+++ b/infra/frontend/Dockerfile
@@ -9,6 +9,7 @@ ARG PORT
 ARG NODE_ENV
 ARG NODE_PATH
 ARG API_ADDRESS
+ARG API_BASE_URL
 
 RUN apk add make
 
@@ -30,7 +31,8 @@ COPY ./public ./public
 RUN echo "NODE_ENV=${NODE_ENV}" > ${ENV_FILE} \
     && echo "PORT=${PORT}" >> ${ENV_FILE} \
     && echo "NODE_PATH=${NODE_PATH}" >> ${ENV_FILE} \
-    && echo "API_ADDRESS=${API_ADDRESS}" >> ${ENV_FILE}
+    && echo "API_ADDRESS=${API_ADDRESS}" >> ${ENV_FILE} \
+    && echo "API_BASE_URL=${API_BASE_URL}" >> ${ENV_FILE}
 
 RUN make install-${ENVIRONMENT}-frontend
 
