--- a/mapping_workbench/ui/package.json
+++ b/mapping_workbench/ui/package.json
@@ -44,9 +44,11 @@
     "formik": "2.2.9",
     "gray-matter": "4.0.3",
     "i18next": "22.4.15",
+    "jwt-decode": "^3.1.2",
     "lodash.debounce": "4.0.8",
     "lodash.isequal": "4.5.0",
     "mapbox-gl": "2.14.1",
+    "moment": "^2.29.4",
     "mui-one-time-password-input": "1.1.0",
     "next": "13.4.2",
     "nprogress": "0.2.0",
