--- a/mapping_workbench/ui/package.json
+++ b/mapping_workbench/ui/package.json
@@ -53,6 +53,7 @@
     "next": "13.4.2",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
+    "prismjs": "^1.29.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
@@ -66,6 +67,7 @@
     "react-markdown": "8.0.7",
     "react-quill": "2.0.0",
     "react-redux": "8.0.5",
+    "react-simple-code-editor": "^0.13.1",
     "react-slick": "0.29.0",
     "react-syntax-highlighter": "15.5.0",
     "redux": "4.2.1",
@@ -94,6 +96,7 @@
     "@types/react-syntax-highlighter": "15.5.6",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "sass": "^1.65.1",
     "typescript": "5.0.4"
   }
 }
