--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -20,24 +20,24 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade setuptools pip wheel
-#          make install
-#          make install-dev
-#      - name: Make envfile
-#        uses: SpicyPizza/create-envfile@v1
-#        with:
-#          envkey_VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
-#          envkey_VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
-#      - name: Run unit tests
-#        run: make test
-#      - name: SonarCloud Scan
-#        uses: SonarSource/sonarcloud-github-action@master
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          python-version: 3.10
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade setuptools pip wheel
+          make install
+          make install-dev
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          envkey_VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+          envkey_VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+      - name: Run unit tests
+        run: make test
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 #    - name: Upload coverage to Codecov
 #      uses: codecov/codecov-action@v1
