--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,7 @@
 # skipping the setup.py installation/requirement for the moment
 skipsdist = true
 envlist =
-#py37,py38,py39,py310 # skipping multiple python distros for the moment
-    py38
+    py310
 
 [testenv]
 description = Running tests in the corresponding environment
@@ -32,7 +31,7 @@ commands =
 
 [testenv:cover]
 basepython =
-    python3.8
+    python3.10
 commands =
     {envpython} -m pytest \
     --cov-report term \
@@ -52,10 +51,10 @@ log_cli_date_format = %Y-%m-%d %H:%M:%S
 
 
 addopts =
-    --cov=ted_sws
-    --cov-report=html
-    --cov-report=term
-    --cov-report=xml
+;    --cov=mapping_workbench
+;    --cov-report=html
+;    --cov-report=term
+;    --cov-report=xml
     --junitxml=junit_report.xml
     -r a
     -q
