--- a/tox.ini
+++ b/tox.ini
@@ -51,10 +51,10 @@ log_cli_date_format = %Y-%m-%d %H:%M:%S
 
 
 addopts =
-;    --cov=mapping_workbench
-;    --cov-report=html
-;    --cov-report=term
-;    --cov-report=xml
+    --cov=mapping_workbench
+    --cov-report=html
+    --cov-report=term
+    --cov-report=xml
     --junitxml=junit_report.xml
     -r a
     -q
