--- a/mapping_workbench/frontend/.babelrc
+++ b/mapping_workbench/frontend/.babelrc
@@ -1,10 +1,23 @@
 {
-    "plugins": [
-      ["prismjs", {
-          "languages": ["javascript", "css", "markup"],
-          "plugins": ["line-numbers"],
-          "theme": "okaidia",
-          "css": true
-      }]
+  "presets": [
+    "@babel/preset-env",
+    ["@babel/preset-react", {"runtime": "automatic"}]
+  ],
+  "plugins": [
+    [
+      "prismjs",
+      {
+        "languages": [
+          "javascript",
+          "css",
+          "markup"
+        ],
+        "plugins": [
+          "line-numbers"
+        ],
+        "theme": "okaidia",
+        "css": true
+      }
     ]
-  }
+  ]
+}
