--- a/infra/frontend/docker-compose.dev.yml
+++ b/infra/frontend/docker-compose.dev.yml
@@ -18,11 +18,10 @@ services:
         - NODE_PATH=/app
         - API_ADDRESS=http://api.mw.${SUBDOMAIN}${DOMAIN}
         - API_BASE_URL=/api/v1
-#    ports:
-#      - ${MW_FRONTEND_SERVER_PORT}:${MW_FRONTEND_SERVER_PORT}
+    ports:
+      - ${MW_FRONTEND_SERVER_PORT}:${MW_FRONTEND_SERVER_PORT}
     networks:
       - proxy-net
-      - mw-net
     labels:
       #### Labels define the behavior and rules of the traefik proxy for this container ####
       - "traefik.enable=true" # <== Enable traefik to proxy this container
@@ -33,11 +32,20 @@ services:
       - "traefik.http.routers.mw-frontend-${ENVIRONMENT}-secured.rule=Host(`mw.${SUBDOMAIN}${DOMAIN}`)" # <== Your Domain Name for the https rule
       - "traefik.http.routers.mw-frontend-${ENVIRONMENT}-secured.entrypoints=web-secured" # <== Defining entrypoint for https, **ref: line 31
       - "traefik.http.routers.mw-frontend-${ENVIRONMENT}-secured.tls=true"
-
+    volumes:
+      - ${FRONTEND_INFRA_FOLDER}/src:/app/src
+      - ${FRONTEND_INFRA_FOLDER}/public:/app/public
+      - type: bind
+        source: ${FRONTEND_INFRA_FOLDER}/package.json
+        target: /app/package.json
+      - type: bind
+        source: ${FRONTEND_INFRA_FOLDER}/Makefile
+        target: /app/Makefile
+      - type: bind
+        source: ${FRONTEND_INFRA_FOLDER}/next.config.js
+        target: /app/next.config.js
 
 networks:
   proxy-net:
     external:
       name: proxy-net
-  mw-net:
-    external: true
