--- a/mapping_workbench/frontend/Makefile
+++ b/mapping_workbench/frontend/Makefile
@@ -16,8 +16,8 @@ install-dev-frontend:
 
 install-staging-frontend:
 	@ echo "Installing STAGING FRONTEND"
-	@ npm install --production && npm install -g serve && npm run build && rm -fr node_modules
+	@ npm install && npm install -g serve && npm run build && rm -fr node_modules
 
 install-prod-frontend:
 	@ echo "Installing PROD FRONTEND"
-	@ npm install --production && npm install -g serve && npm run build && rm -fr node_modules
+	@ npm install && npm install -g serve && npm run build && rm -fr node_modules
