testing staging server

--- a/mapping_workbench/frontend/Makefile
+++ b/mapping_workbench/frontend/Makefile
@@ -4,11 +4,12 @@ start-dev-frontend:
 
 start-staging-frontend:
 	@ echo "Starting STAGING FRONTEND"
-	serve -s build
+	@ npm run dev
+#	@ serve -s build
 
 start-prod-frontend:
 	@ echo "Starting PROD FRONTEND"
-	serve -s build
+	@ serve -s build
 
 install-dev-frontend:
 	@ echo "Installing DEV FRONTEND"
@@ -16,7 +17,8 @@ install-dev-frontend:
 
 install-staging-frontend:
 	@ echo "Installing STAGING FRONTEND"
-	@ npm install && npm install -g serve && npm run build && rm -fr node_modules
+	@ npm install
+#	@ npm install && npm install -g serve && npm run build && rm -fr node_modules
 
 install-prod-frontend:
 	@ echo "Installing PROD FRONTEND"
