--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,20 @@ jobs:
         install -m 600 -D /dev/null ~/.ssh/id_rsa
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+
     - name: connect and pull
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd work && mkdir test-github && exit"
+      run: |
+        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
+        cd ${{ secrets.WORK_DIR }}
+
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: git status
+      run: git status
+
+    - name: exit ssh
+      run: exit
+
     - name: cleanup
       run: rm -rf ~/.ssh
