--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,57 @@
 name: CI/CD pipeline
 
 on:
-  push:
-    branches: [ feature/* , hotfix/*]
+  workflow_dispatch:
+  pull_request:
+    branches: [ feature/* , hotfix/*, release/*]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
-  deploy:
-    name: pyTest
+  run_tests:
+    name: Running tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade setuptools pip wheel
+          make install
+          make install-dev
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          envkey_VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+          envkey_VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+      - name: Run unit tests
+        run: make test
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage.xml
+          env_vars: OS,PYTHON
+          name: codecov-umbrella
+          fail_ci_if_error: true
+
+  deploy_and_build:
+    needs: run_tests
+    name: Build and deploy
     runs-on: ubuntu-latest
     environment: staging
 
@@ -28,15 +69,6 @@ jobs:
     - name: connect, pull and build
       run: |
         ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git pull && git checkout ${{ steps.extract_branch.outputs.branch }} && make build-frontend && make build-backend && exit"
-
-#    - name: Checkout
-#      uses: actions/checkout@v2
-#
-#    - name: git status
-#      run: git status
-#
-#    - name: exit ssh
-#      run: exit
 
     - name: cleanup
       run: rm -rf ~/.ssh
