--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Tests on push
 
 on:
   push:
@@ -11,8 +11,8 @@ concurrency:
 env:
   ENVIRONMENT: staging
 jobs:
-  build:
-    name: pyTest
+  run_tests_on_push:
+    name: Running tests
     runs-on: ubuntu-latest
 
     steps:
