--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade setuptools pip wheel
-          make install
-          make install-dev
+          make install-dev-backend
+#          make install-dev
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1
         with:
