--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: CI/CD pipeline
 
 on:
   workflow_dispatch:
+        inputs:
   pull_request:
     branches: [ feature/* , hotfix/*, release/*]
 
