--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ fastapi~=0.99.1
 fastapi-users[beanie,oauth]==12.1.0
 uvicorn[standard]
 requests-toolbelt~=1.0.0
+xlrd~=2.0.1
+openpyxl~=3.1.2
+pandas~=2.1.0
