--- a/infra/frontend/docker-compose.yml
+++ b/infra/frontend/docker-compose.yml
@@ -16,7 +16,7 @@ services:
         - PORT=${MW_FRONTEND_SERVER_PORT}
         - NODE_ENV=${NODE_ENV}
         - NODE_PATH=/app
-        - API_ADDRESS=//api.mw.${SUBDOMAIN}${DOMAIN}
+        - API_ADDRESS=https://api.mw.${SUBDOMAIN}${DOMAIN}
         - API_BASE_URL=/api/v1
 #    ports:
 #      - ${MW_FRONTEND_SERVER_PORT}:${MW_FRONTEND_SERVER_PORT}
