--- a/infra/frontend/docker-compose.yml
+++ b/infra/frontend/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       #### FRONTEND rules
       - "traefik.http.routers.mw-frontend-${ENVIRONMENT}.rule=Host(`mw.${SUBDOMAIN}${DOMAIN}`)" # <== Your Domain Name goes here for the http rule
       - "traefik.http.routers.mw-frontend-${ENVIRONMENT}.entrypoints=web" # <== Defining the entrypoint for http, **ref: line 30
-      #- "traefik.http.routers.mw-frontend-${ENVIRONMENT}.middlewares=redirect@file" # <== This is a middleware to redirect to https
+      - "traefik.http.routers.mw-frontend-${ENVIRONMENT}.middlewares=redirect@file" # <== This is a middleware to redirect to https
       - "traefik.http.routers.mw-frontend-${ENVIRONMENT}-secured.rule=Host(`mw.${SUBDOMAIN}${DOMAIN}`)" # <== Your Domain Name for the https rule
       - "traefik.http.routers.mw-frontend-${ENVIRONMENT}-secured.entrypoints=web-secured" # <== Defining entrypoint for https, **ref: line 31
       - "traefik.http.routers.mw-frontend-${ENVIRONMENT}-secured.tls=true"
