--- a/infra/backend/docker-compose.yml
+++ b/infra/backend/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - "traefik.http.routers.mw-backend-${ENVIRONMENT}-secured.rule=Host(`api.mw.${SUBDOMAIN}${DOMAIN}`)" # <== Your Domain Name for the https rule
       - "traefik.http.routers.mw-backend-${ENVIRONMENT}-secured.entrypoints=web-secured" # <== Defining entrypoint for https, **ref: line 31
       - "traefik.http.routers.mw-backend-${ENVIRONMENT}-secured.tls=true"
+      - "traefik.http.routers.mw-backend-${ENVIRONMENT}-secured.tls.certresolver=mytlschallenge"
 
 
 networks:
