--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -46,6 +46,7 @@
     "firebase": "9.22.0",
     "formik": "2.2.9",
     "gray-matter": "4.0.3",
+    "html-react-parser": "^4.2.2",
     "i18next": "22.4.15",
     "jwt-decode": "^3.1.2",
     "lodash.debounce": "4.0.8",
