--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -42,6 +42,7 @@
     "aws-amplify": "5.2.1",
     "axios": "^1.4.0",
     "date-fns": "2.30.0",
+    "dotenv": "^16.3.1",
     "draft-js": "0.11.7",
     "firebase": "9.22.0",
     "formik": "2.2.9",
