added CI for prod

--- a/.github/workflows/production-ci-cd-pipeline.yml
+++ b/.github/workflows/production-ci-cd-pipeline.yml
@@ -1,9 +1,6 @@
-name: staging CI/CD pipeline
+name: prod CI/CD pipeline
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 concurrency:
@@ -70,7 +67,7 @@ jobs:
 
     - name: connect, pull and build
       run: |
-        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout main && git pull && make staging-dotenv-file && make build-frontend && make build-backend && exit"
+        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout main && git pull && make prod-dotenv-file && make build-frontend && make build-backend && exit"
 
     - name: cleanup
       run: rm -rf ~/.ssh
