--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -46,6 +46,7 @@
     "date-fns": "2.30.0",
     "dotenv": "^16.3.1",
     "draft-js": "0.11.7",
+    "file-saver": "^2.0.5",
     "firebase": "9.22.0",
     "formik": "2.2.9",
     "gray-matter": "4.0.3",
