--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,4 @@ infra/backend/src
 .rmlmapper
 activate_venv.sh
 tests/test_data/mappings/package_eforms_16_1.5/transformation/~$conceptual_mappings.xlsx
+tmp/
