api rml_mapper error handling update

--- a/.github/workflows/staging-ci-cd-pipeline.yml
+++ b/.github/workflows/staging-ci-cd-pipeline.yml
@@ -70,7 +70,7 @@ jobs:
 
     - name: connect, pull and build
       run: |
-        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.STAGING_WORK_DIR }} && git checkout main && git pull && make build-frontend && make build-backend && exit"
+        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.STAGING_WORK_DIR }} && git checkout main && git pull && make stop-frontend && make stop-backend && make build-frontend && make build-backend && exit"
 
     - name: cleanup
       run: rm -rf ~/.ssh
