MWB-382: add common steps

--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -112,6 +112,7 @@
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true,
-    "step_definitions": "cypress/e2e/"
+    "step_definitions": "cypress/e2e/",
+    "commonPath" : "cypress/e2e/common"
   }
 }
