--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -11,7 +11,7 @@
     "export": "next export",
     "lint": "next lint",
     "lint-fix": "next lint --fix",
-    "test": "",
+    "test": "cypress run",
     "cy:open": "cypress open",
     "cy:tests": "cypress run"
   },
@@ -103,7 +103,7 @@
     "@types/react-slick": "0.23.10",
     "@types/react-syntax-highlighter": "15.5.6",
     "babel-plugin-prismjs": "^2.1.0",
-    "cypress": "^13.5.1",
+    "cypress": "^13.8.1",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
@@ -113,6 +113,6 @@
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true,
     "step_definitions": "cypress/e2e/",
-    "commonPath" : "cypress/e2e/common"
+    "commonPath": "cypress/e2e/common"
   }
 }
