--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -59,6 +59,7 @@
     "moment": "^2.29.4",
     "mui-one-time-password-input": "1.1.0",
     "next": "13.4.19",
+    "next-auth": "^4.24.7",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
     "prismjs": "^1.29.0",
