--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -57,6 +57,7 @@
     "lodash.isequal": "4.5.0",
     "mapbox-gl": "2.14.1",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.45",
     "mui-one-time-password-input": "1.1.0",
     "next": "13.4.19",
     "nprogress": "0.2.0",
