--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -33,10 +33,11 @@
     "@fullcalendar/timegrid": "6.1.7",
     "@fullcalendar/timeline": "6.1.7",
     "@mui/icons-material": "5.11.16",
-    "@mui/lab": "5.0.0-alpha.129",
-    "@mui/material": "5.13.0",
+    "@mui/lab": "^5.0.0-alpha.129",
+    "@mui/material": "^5.13.0",
     "@mui/system": "5.12.3",
     "@mui/x-date-pickers": "6.4.0",
+    "@mui/x-tree-view": "^7.5.1",
     "@react-pdf/renderer": "3.1.9",
     "@reduxjs/toolkit": "1.9.5",
     "@untitled-ui/icons-react": "0.1.1",
@@ -53,6 +54,7 @@
     "html-react-parser": "^4.2.2",
     "i18next": "22.4.15",
     "jwt-decode": "^3.1.2",
+    "latest": "^0.2.0",
     "lodash.debounce": "4.0.8",
     "lodash.isequal": "4.5.0",
     "mapbox-gl": "2.14.1",
