--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -43,6 +43,7 @@
     "@reduxjs/toolkit": "1.9.5",
     "@untitled-ui/icons-react": "0.1.1",
     "apexcharts": "3.40.0",
+    "autosuggest-highlight": "^3.3.4",
     "aws-amplify": "5.2.1",
     "axios": "^1.4.0",
     "date-fns": "2.30.0",
