--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -31,8 +31,11 @@ jobs:
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1
         with:
-          envkey_VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
-          envkey_VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+          FILE_NAME: .env
+          args: |
+            VAULT_TOKEN=${{ secrets.VAULT_TOKEN }}
+            VAULT_ADDR=${{ secrets.VAULT_ADDR }}
+          fail_on_empty: true
       - name: Run unit tests
         run: make test-unit-backend
       - name: SonarCloud Scan
