--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           FILE_NAME: .env
           args: |
-            VAULT_TOKEN=${{ secrets.VAULT_TOKEN }}
+            VAULT_TOKEN=${{ secrets.VAULT_TOKEN }} |
             VAULT_ADDR=${{ secrets.VAULT_ADDR }}
           fail_on_empty: true
       - name: Run unit tests
