--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -72,6 +72,7 @@
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-beautiful-dnd": "13.1.1",
+    "react-codemirror2": "^8.0.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "1.15.0",
     "react-dropzone": "14.2.3",
