MWB-669: more changes

--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -93,6 +93,7 @@
     "stylis": "4.2.0",
     "stylis-plugin-rtl": "2.1.1",
     "uuid": "^9.0.0",
+    "xml2js": "^0.6.2",
     "yup": "1.1.1"
   },
   "devDependencies": {
