--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -21,6 +21,9 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "2.0.4",
     "@aws-amplify/auth": "5.3.6",
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/lang-xml": "^6.1.0",
+    "@codemirror/state": "^6.4.1",
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.0",
     "@emotion/server": "11.11.0",
@@ -42,6 +45,7 @@
     "@mui/x-tree-view": "^7.5.1",
     "@react-pdf/renderer": "3.1.9",
     "@reduxjs/toolkit": "1.9.5",
+    "@uiw/react-codemirror": "^4.23.0",
     "@untitled-ui/icons-react": "0.1.1",
     "apexcharts": "3.40.0",
     "aws-amplify": "5.2.1",
@@ -49,6 +53,7 @@
     "date-fns": "2.30.0",
     "dotenv": "^16.3.1",
     "draft-js": "0.11.7",
+    "fast-xml-parser": "^4.4.0",
     "file-saver": "^2.0.5",
     "firebase": "9.22.0",
     "formik": "2.2.9",
