--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -50,6 +50,8 @@
     "apexcharts": "3.40.0",
     "aws-amplify": "5.2.1",
     "axios": "^1.4.0",
+    "classnames": "^2.5.1",
+    "codemirror": "^5.65.17",
     "date-fns": "2.30.0",
     "dotenv": "^16.3.1",
     "draft-js": "0.11.7",
