--- a/.github/workflows/staging-ci-cd-pipeline.yml
+++ b/.github/workflows/staging-ci-cd-pipeline.yml
@@ -2,8 +2,7 @@ name: staging CI/CD pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main, feature/* , hotfix/*, release/* ]
   workflow_dispatch:
 
 concurrency:
@@ -11,46 +10,6 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-#  run_tests:
-#    name: Running tests
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-#      - name: Set up Python ${{ matrix.python-version }}
-#        uses: actions/setup-python@v2
-#        with:
-#          python-version: '3.10'
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade setuptools pip wheel
-#          make install-dev-backend
-##          make install
-##          make install-dev
-#      - name: Make envfile
-#        uses: SpicyPizza/create-envfile@v1
-#        with:
-#          envkey_VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
-#          envkey_VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
-#      - name: Run unit tests
-#        run: make test
-#      - name: SonarCloud Scan
-#        uses: SonarSource/sonarcloud-github-action@master
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#
-#      - name: Upload coverage to Codecov
-#        uses: codecov/codecov-action@v1
-#        with:
-#          token: ${{ secrets.CODECOV_TOKEN }}
-#          file: coverage.xml
-#          env_vars: OS,PYTHON
-#          name: codecov-umbrella
-#          fail_ci_if_error: true
-
   deploy_and_build:
 #    needs: run_tests
     name: Build and deploy
@@ -70,7 +29,41 @@ jobs:
 
     - name: connect, pull and build
       run: |
-        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.STAGING_WORK_DIR }} && git checkout main && git pull && make build-frontend && make build-backend && exit"
+        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.STAGING_WORK_DIR }} && git checkout ${{ steps.extract_branch.outputs.branch }} && git pull && make build-frontend && make build-backend && exit"
 
     - name: cleanup
       run: rm -rf ~/.ssh
+
+  run_tests:
+    name: Running tests
+    needs: deploy_and_build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Install ssh keys
+        run: |
+          install -m 600 -D /dev/null ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+
+      - name: Run e2e tests
+        run: |
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.STAGING_WORK_DIR }} && npm install cypress && make test-e2e && exit"
+
+      - name: cleanup
+        run: rm -rf ~/.ssh
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage.xml
+          env_vars: OS,PYTHON
+          name: codecov-umbrella
+          fail_ci_if_error: true
