--- a/.github/workflows/staging-ci-cd-pipeline.yml
+++ b/.github/workflows/staging-ci-cd-pipeline.yml
@@ -1,42 +1,42 @@
 name: staging CI/CD pipeline
 
 on:
-  push:
-    branches: [ main, feature/* , hotfix/*, release/* ]
-  workflow_dispatch:
+  pull_request:
+    branches: [ feature/* , hotfix/*, release/* ]
+#  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
-#  deploy_and_build:
-##    needs: run_tests
-#    name: Build and deploy
-#    runs-on: ubuntu-latest
-#    environment: staging
-#
-#    steps:
-#    - name: Extract branch name
-#      shell: bash
-#      run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
-#      id: extract_branch
-#    - name: Install ssh keys
-#      run: |
-#        install -m 600 -D /dev/null ~/.ssh/id_rsa
-#        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-#        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
-#
-#    - name: connect, pull and build
-#      run: |
-#        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.STAGING_WORK_DIR }} && git checkout ${{ steps.extract_branch.outputs.branch }} && git pull && make build-frontend && make build-backend && exit"
+  deploy_and_build:
+#    needs: run_tests
+    name: Build and deploy
+    runs-on: ubuntu-latest
+    environment: staging
 
-#    - name: cleanup
-#      run: rm -rf ~/.ssh
+    steps:
+    - name: Extract branch name
+      shell: bash
+      run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+      id: extract_branch
+    - name: Install ssh keys
+      run: |
+        install -m 600 -D /dev/null ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+
+    - name: connect, pull and build
+      run: |
+        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.STAGING_WORK_DIR }} && git checkout ${{ steps.extract_branch.outputs.branch }} && git pull && make build-frontend && make build-backend && exit"
+
+    - name: cleanup
+      run: rm -rf ~/.ssh
 
   run_tests:
     name: Running tests
-    #needs: deploy_and_build
+    needs: deploy_and_build
     runs-on: ubuntu-latest
     environment: staging
 
@@ -47,9 +47,13 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
 
-      - name: Run e2e tests
+      - name: Run Backend E2E tests
         run: |
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'export NVM_DIR="$HOME/.nvm" && \. "$NVM_DIR/nvm.sh" && cd ${{ secrets.STAGING_WORK_DIR }} && python3 -m venv venv && source venv/bin/activate && cp .env mapping_workbench/frontend/.env && make test-e2e-frontend && exit'
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'cd ${{ secrets.STAGING_WORK_DIR }} && python3 -m venv venv && source venv/bin/activate && make test-e2e-backend && exit'
+
+      - name: Run Frontend E2E tests
+        run: |
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'export NVM_DIR="$HOME/.nvm" && \. "$NVM_DIR/nvm.sh" && cd ${{ secrets.STAGING_WORK_DIR }} && cp .env mapping_workbench/frontend/.env && make test-e2e-frontend && exit'
 
       - name: cleanup
         run: rm -rf ~/.ssh
